fixed missing BackgroundDescription field on orders

--- a/src/components/orders/orders.module.css
+++ b/src/components/orders/orders.module.css
@@ -16,7 +16,7 @@
 }
 
 .edit-order-modal {
-    width: 45rem;
+    width: 50rem;
 }
 
 .custom-autocomplete {
